--- a/9-javascript-application-development/03_npm/my-project/package.json
+++ b/9-javascript-application-development/03_npm/my-project/package.json
@@ -1,5 +1,15 @@
 {
   "dependencies": {
     "jquery": "^3.7.1"
-  }
+  },
+  "name": "my-app",
+  "version": "1.0.0",
+  "description": "This is my demo app",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
 }
